Made rows and columns stop jumping at animations

--- a/styles.css
+++ b/styles.css
@@ -403,6 +403,8 @@ background-image: linear-gradient(grey, black);
 }
 
 .thumbnail-container {
+  width:310px;
+  height:310px; 
   padding:0;
   margin:10px 10px;
 }
@@ -411,7 +413,8 @@ background-image: linear-gradient(grey, black);
   width:310px;
   height:310px;
   position:relative;
-  left:-97%;
+  top:-99%;
+  left:-2%;
   margin-right: -300px;
   padding:0;
 }
